services-&-networking/service-clusterip-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: ClusterIp
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myapp
    type: back-end
